# algebraicnumber

./: .gitignore  .gitlab-ci.yml  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  clean.sh  coverage.cfg  noxfile.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
AlgebraicNumber/: AlgebraicNumber.py  QMatrix.py  QMatrix2.py  QPolynomial.py  QPolynomial2.py  __init__.py  apslq.py  identification.py  inria_utils.py  spslq.py  utils.py
docs/: conf.py  index.rst  requirements.txt
tests/: TestBase.py  requirements.txt  test_inria.py  test_ops.py  test_pslq.py
