[metadata]
name = AlgebraicNumber
author = Yann de The
author_email = ydethe@gmail.com
home-page = https://gitlab.com/ydethe/algebraicnumber
description = Manipulation of algebraic numbers
long-description = file: README.md
version = 2.4.1
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
url = https://gitlab.com/ydethe/algebraicnumber
project_urls =
    Documentation = https://ydethe.gitlab.io/algebraicnumber/AlgebraicNumber
    Source = https://gitlab.com/ydethe/algebraicnumber

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
packages = find:
setup_requires =
    setuptools >=38.3.0
    wheel >=0.29.0
tests_require =
    tox
    pytest

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = gztar
